<resources>
    <string name="app_name">FoodEaTO</string>
    <string name="InfoTitle">Information</string>
    <string name="default_user_name">Insert username</string>
    <string name="default_user_email">Insert email</string>
    <string name="default_user_description">Insert short description</string>
    <string name="default_user_phone_number">Insert phone number</string>
    <string name="name_field_id">user_name</string>
    <string name="email_field_id">user_email</string>
    <string name="pwd_field_id">user_password</string>
    <string name="phone_number__field_id">user_phone_number</string>
    <string name="description_field_id">user_description</string>
    <string name="username_title">Username</string>
    <string name="email_title">Email</string>
    <string name="phone_number_title">Phone number</string>
    <string name="description_title">Description</string>
    <string name="password_title">Change Password</string>
    <string name="insert_old_password">Insert your actual password</string>
    <string name="insert_password">Insert the new password</string>
    <string name="repeat_password">Repeat the password</string>
    <string name="invalid_password">Password length at least 8 characters and must contain an uppercase and a number</string>
    <string name="different_password">The two password are different</string>
    <string name="insert_username">Type your username</string>
    <string name="insert_email">Type your email address</string>
    <string name="insert_phone_number">Type your phone number</string>
    <string name="insert_description">Type a short description about you</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">CANCEL</string>
    <string name="select_photo">Select photo</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="pick_from_gallery">Pick from gallery</string>
    <string name="cancel_string">Cancel</string>
    <string name="image_disappear">The selected image is no longer available</string>
    <string name="perm_needed">Permission needed</string>
    <string name="perm_why_1">This permission is needed to pick a photo from gallery</string>
    <string name="perm_why_2">This permission is needed to take photo</string>
    <string name="ok_string">OK</string>
    <string name="perm_denied">Permission Denied</string>
    <string name="action_search">Search</string>
    <string name="action_setting">Information</string>
    <string name="home_title">Home</string>
    <string name="order_title">Order</string>
    <string name="account_title">Mine</string>
    <string name="futureDevelopment">Future development</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome to food world!</string>
    <string name="nav_header_subtitle">Please sign up or login to enjoy more!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_login">Login</string>
    <string name="menu_setting">Account</string>
    <string name="menu_help">Help</string>
    <string name="user_name">User name</string>
    <string name="user_phone">Phone number</string>
    <string name="user_description">Your description</string>
    <string name="complete_rest_btn">Complete registration</string>
    <string name="username_updated">Username is updated.</string>
    <string name="username_failed_update">Failed to update username!</string>
    <string name="invalid_username">Invalid username. Use minimum 3 characters</string>
    <string name="email_updated">Email address is updated. Please sign in with new email id!</string>
    <string name="email_failed_updated">Failed to update email!</string>
    <string name="phone_updated">Phone number is updated.</string>
    <string name="phone_failed_updated">Failed to update phone number!</string>
    <string name="invalid_mail">Enter valid email address!</string>
    <string name="invalid_phone">Invalid phone number</string>
    <string name="enter_email">Enter email address!</string>
    <string name="logout_title">Log out</string>
    <string name="password_failed_updated">Failed to update password!</string>
    <string name="create_profile_failed">Error in creating your profile.</string>
    <string name="action_sign_in_short">Register</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove account</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">SEND</string>
    <string name="btn_remove">REMOVE</string>
    <string name="btn_sign_out">SIGN OUT</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="action_settings_firebase">Firebase Account</string>
    <string name="total_num_products">Numero Totale di Prodotti</string>
    <string name="cd_logoimageview">contentDescription logo ImageView</string>
    <string name="menu_home">Home</string>
    <string name="menu_account">Account Info</string>
    <string name="menu_star">Favourite</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_comments">Comments</string>
    <string name="menu_orders">Current orders</string>
    <string name="str_txt_content">起送 ￥25 配送费 ￥1 平均45分钟</string>
    <string name="str_txt_month_sales">月售23份</string>
    <string name="str_tvRestaurantName">必胜宅急送（锦秋店）</string>
    <string name="comments_label">Comments</string>
    <string name="information_label">Information</string>
    <string name="title_activity_orders">Orders</string>
    <string name="title_activity_favorites">Favorites</string>
    <string name="title_search_history_order">search your history order by input restaurant name or dish name</string>
    <string name="str_account_details">Account Details</string>
    <string name="str_payment_method">Payment Method</string>
    <string name="str_adding_address">Adding Address</string>
    <string name="ContentDescription">TODO-content description of pics</string>
    <string name="title_basket">CHECKOUT</string>
    <string name="title_total_cost">TOTAL COST :</string>
    <string name="title_delivery_address">DELIVERY ADDRESS</string>
    <string name="title_delivery_time">DELIVERY TIME</string>
    <string name="title_as_soon_as_possible">AS SOON AS POSSIBLE</string>
    <string name="title_confirm_order">CONFIRM ORDER</string>
    <string name="str_nnt_burgerking">BurgerKing</string>
    <string name="str_nnt_product_name">Product name</string>
    <string name="str_nnt_price">Price</string>
    <string name="str_nnt_5">5</string>
    <string name="str_nnt_please_addding_your_delivery_address_here">Please addding your delivery address here</string>
    <string name="str_total_pay">￥0.00</string>
    <string name="button_save">SAVE</string>
    <string name="action_filter">Filter</string>
    <string name="hint_search_restaurants">Search restaurants</string>
    <string name="restaurants_filter_done">Done</string>
    <string name="restaurants_filter_clear_all">clear all</string>
    <string name="title_total_items">TOTAL ITEMS :</string>
    <string name="str_please_leave_your_notes_here_if_needed">Please leave your notes here if needed</string>
    <string name="title_order_notes">LEAVE YOUR NOTES</string>
    <string name="str_nnt_order_status">This order has already finished</string>
    <string name="btn_order_accepted">Accept Order</string>
    <string name="btn_order_rejected">Reject Order</string>
    <string name="history_order_delivery_detail_information">Delivery Detail Information</string>
    <string name="history_order_payment_method">Payment Method</string>
    <string name="history_order_once_more">ORDER ONCE MORE</string>
    <string name="history_order_welcome_next_time">Welcome next time !</string>
    <string name="history_order_detail_informantion">Order Detail Informantion</string>
    <string name="history_order_delivery_time">Delivery Time</string>
    <string name="history_order_id">Order ID</string>
    <string name="history_order_delivery_address">Delivery Address</string>
    <string name="histoyr_order_delivery_time">Delivery Time</string>
    <string name="history_order_time">Order Time</string>
    <string name="current_order_details_title">Current Order</string>
    <string name="title_activity_comments">Comments</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_leave_your_comments">Please leave your comments here</string>
    <string name="title_comments_food_quality">Quality</string>
    <string name="title_comments_delivery_service">Service</string>
    <string name="title_comment_submit_comment">SUBMIT COMMENT</string>
    <string name="confirmation_code">Your Confirmation code:\n(This code should be showed to the Biker when you are asked for the code .)</string>
    <string name="title_delivery_city">Town</string>
    <string name="title_delivery_route">Street/Square</string>
    <string name="title_delivery_number">n°</string>
    <string name="title_delivery_notes">DELIVERY NOTES</string>
    <string name="str_nnt_please_addding_your_delivery_notes_here">Please addding your delivery notes here</string>
    <string name="address_not_correct">Your address is not valid</string>
    <string name="used_addre_title">Your used addresses</string>
    <string name="title_activity_history_order">HistoryOrder</string>
    <string name="label_empty_data">Nothing is here now</string>
    <string name="btn_reload">RELOAD</string>
    <string name="menu_history_order">Completed orders</string>
    <string name="past_address_tv_title">Address already used</string>
    <string name="added_to_favorite">Added to favorite</string>
    <string name="internet_down">Internet problem, retry!</string>
    <string name="removed_from_favorite">Removed from favorite</string>
    <string name="add_notes">Add notes</string>
    <string name="order_sent">Your order is sending to restaurant !</string>
    <string name="empty_basket">Please check your basket ,it is empty !</string>
    <string name="rest_not_found">Can not find this restaurant !</string>
    <string name="title_close_icon">X</string>
    <string name="title_leave_this_store">Leave this Store ?</string>
    <string name="title_leave_alert_msg">If you exit now, you will lose all the products you have already selected.Are you sure ?</string>
    <string name="btn_yes_leave">YES,LEAVE</string>
    <string name="btn_no_stay">NO,STAY</string>
    <string name="title_leave_comments_for_order">LEAVE COMMENTS</string>
</resources>