<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_orders"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/nav_star"
            android:icon="@drawable/ic_liked"
            android:title="@string/menu_star" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_account_email"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>

</menu>