<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutHistoryOrderItem"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp30"
    android:layout_marginTop="@dimen/dp4"
    android:gravity="center"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/tvHistoryOrderItemName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="start|center"
        android:text="@string/str_nnt_product_name" />

    <TextView
        android:id="@+id/tvHistoryOrderItemPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="start|center"
        android:text="@string/str_nnt_price" />

    <TextView
        android:id="@+id/tvHistoryOrderItemCount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="start|center"
        android:text="@string/str_nnt_5" />
</LinearLayout>
