<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorDivider"
    >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_empty"
        android:contentDescription="@string/ContentDescription" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp6"
        android:text="@string/label_empty_data"
        android:textColor="@color/colorSecondaryText"
        android:textSize="14sp"
        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp24"
        android:layout_marginTop="@dimen/dp6"
        android:text="@string/btn_reload"
        style="@style/Button"
        />

</LinearLayout>