<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutProductItem"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp30"
    android:layout_below="@+id/divider1"
    android:layout_marginTop="@dimen/dp4"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="start|center"
        android:text="@string/str_nnt_product_name" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="start|center"
        android:text="@string/str_nnt_price" />

    <RelativeLayout
        android:id="@+id/rl_left"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:gravity="start|center">

        <ImageView
            android:id="@+id/iv_add"
            android:layout_width="29dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:contentDescription="@string/ContentDescription"
            android:src="@drawable/ic_add_circle_outline_black_24dp" />

        <TextView
            android:id="@+id/tv_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_toStartOf="@+id/iv_add"
            android:layout_toLeftOf="@+id/iv_add"
            android:text="@string/str_nnt_5" />

        <ImageView
            android:id="@+id/iv_remove"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/tv_count"
            android:layout_toLeftOf="@id/tv_count"
            android:contentDescription="@string/ContentDescription"
            android:src="@drawable/ic_remove_circle_outline_black_24dp" />
    </RelativeLayout>
</LinearLayout>
