<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:id="@+id/cvHistoryOrderFinished"
    app:cardBackgroundColor="#FFFFFF"
    app:cardUseCompatPadding="true"

    >
    <RelativeLayout
        android:id="@+id/relativeLayoutHistoryOrderFinished"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp8"
        android:background="#FFFFFF"
        android:padding="@dimen/dp8"
        >


        <TextView
            android:id="@+id/tvRestaurantNameHistoryOrderFinished"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawableRight="@drawable/ic_arrow_right"
            android:gravity="center_vertical"
            android:padding="@dimen/dp4"
            android:text="@string/str_nnt_burgerking"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tvOrderTimeHistoryOrderFinished"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tvRestaurantNameHistoryOrderFinished"
            android:layout_toRightOf="@+id/tvRestaurantNameHistoryOrderFinished"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="end"
            android:padding="@dimen/dp4"
            android:text="@string/str_nnt_order_status"
            android:textAlignment="viewEnd"
            android:textSize="16sp"
            android:textStyle="bold" />
        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/tvRestaurantNameHistoryOrderFinished"
            android:layout_marginTop="@dimen/dp4"
            android:background="@color/colorDivider" />

        <TextView
            android:id="@+id/OrderInfoFinished"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider1"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="4dp"
            android:padding="@dimen/dp4"
            android:text=""
            android:textSize="16sp" />
        <TextView
            android:id="@+id/tv_total_count"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/OrderInfoFinished"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:gravity="end"
            android:padding="@dimen/dp4"
            android:text="@string/title_total_items"
            android:textAlignment="viewEnd"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvOrderTotalCountFinished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/OrderInfoFinished"
            android:layout_toEndOf="@+id/tv_total_count"
            android:layout_toRightOf="@+id/tv_total_count"
            android:gravity="end"
            android:padding="@dimen/dp4"
            android:text="@string/str_nnt_5"
            android:textAlignment="viewEnd"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_totle_money"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_total_count"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="4dp"
            android:gravity="end"
            android:padding="@dimen/dp4"
            android:text="@string/title_total_cost"
            android:textAlignment="viewEnd"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvOrderTotalCostFinished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_total_count"
            android:layout_toEndOf="@+id/tv_totle_money"
            android:layout_toRightOf="@+id/tv_totle_money"
            android:gravity="end"
            android:padding="@dimen/dp4"
            android:text="@string/str_nnt_5"
            android:textAlignment="viewEnd"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/tvOrderTotalCostFinished"
            android:layout_marginTop="@dimen/dp4"
            android:background="@color/colorDivider" />
        <Button
            android:layout_marginTop="@dimen/dp8"
            android:id="@+id/btnCommentForThisOrderFinish"
            style="@style/Widget.AppCompat.Button.Colored"
            android:theme="@style/PrimaryFlatButton"
            android:layout_below="@+id/divider2"
            android:textColor="@color/colorSecondaryText"
            android:padding="@dimen/dp4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_leave_comments_for_order"
            android:visibility="gone"
            />
    </RelativeLayout>
</android.support.v7.widget.CardView>